<resources>
    <string name="app_name">MadLevel1Task2</string>
    <string name="title">Conjunction (AND)</string>
    <string name="submit">Submit</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="and">A^B</string>
    <string name="correct">Je antwoorden zijn correct</string>
    <string name="incorrect">Je antwoorden zijn incorrect</string>
</resources>