<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrueOrFalseActivity">

    <TextView
        android:id="@+id/contentTitle"
        android:layout_width="218dp"
        android:layout_height="37dp"
        android:text="@string/title"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="17dp"
        android:layout_height="34dp"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="35dp"
        android:text="@string/a"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="17dp"
        android:layout_height="34dp"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="41dp"
        android:text="@string/t"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="17dp"
        android:layout_height="34dp"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="48dp"
        android:text="@string/t"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="17dp"
        android:layout_height="34dp"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="48dp"
        android:text="@string/f"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toStartOf="@+id/inputTF"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="17dp"
        android:layout_height="34dp"
        android:layout_marginStart="83dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="53dp"
        android:text="@string/t"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toStartOf="@+id/inputFT"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="17dp"
        android:layout_height="34dp"
        android:layout_marginStart="83dp"
        android:layout_marginBottom="240dp"
        android:text="@string/f"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="17dp"
        android:layout_height="34dp"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="53dp"
        android:text="@string/f"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="17dp"
        android:layout_height="34dp"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="240dp"
        android:text="@string/f"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="17dp"
        android:layout_height="34dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="41dp"
        android:text="@string/t"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toStartOf="@+id/inputTT"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="17dp"
        android:layout_height="34dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="35dp"
        android:text="@string/b"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="47dp"
        android:layout_height="34dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="24dp"
        android:text="@string/and"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/inputTT"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/inputTT"
        android:layout_width="127dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:inputType="text"
        android:maxLength="1"
        android:digits="TF"
        app:layout_constraintBottom_toTopOf="@+id/inputTF"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/inputTF"
        android:layout_width="127dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:maxLength="1"
        android:digits="TF"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/inputFT"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/inputFT"
        android:layout_width="127dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:inputType="text"
        android:maxLength="1"
        android:digits="TF"
        app:layout_constraintBottom_toTopOf="@+id/inputFF"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/inputFF"
        android:layout_width="127dp"
        android:layout_height="51dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="223dp"
        android:ems="10"
        android:inputType="text"
        android:maxLength="1"
        android:digits="TF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView13" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="137dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

</androidx.constraintlayout.widget.ConstraintLayout>